# overtaking_research

./: compare.py  generate_diff.py  implementation_plan.md  mpc.md  plot_pid_vs_mpc.py  pure_diff.py
jetracer/: init_pca9685.py
jetracer/jetracer/: __init__.py  jetracer.py  nvidia_racecar.py
jetracer/jetracer.egg-info/: SOURCES.txt  requires.txt
jetracer/notebooks/: Untitled.ipynb  basic_motion.ipynb
jetson/: drive.py  setup.py
jetson/jetracer/: __init__.py  jetracer.py
jetson/jetracer.egg-info/: PKG-INFO  SOURCES.txt
jetson/notebooks/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
overtaking_car/: package.xml  setup.cfg  setup.py
overtaking_car/overtaking_car/: jetracer_node.py
tests/: alternate_lane.py  assemble.js  assemble_version3.py  cannylane.py  encodertest.py  exp1_keyboard.py  exp2_lidar_stop.py  exp3_lane_follow.py  exp3_obstacle_avoidance.py  exp4_lane_follow.py  exp4_lane_follow_lidar_stop.py  exp5_lane_follow_lidar_stop.py  exp5_lane_switch_no_recovery.py  exp6_lane_follow_obstacle_switch.py  exp6_lane_switch_no_recovery.py  exp7_lane_switch_recovery.py  exp8_lane_switch_recovery.py  experiments.py  getencoder.py  getimu.py  lane_follow.py  lane_old.py  lanev1.py  lidar_cone.py  line_follow.py  mpc_controller.py  mvp.py  pid+pure_timing.py  safety_stop.py  test.py  test_cam  test_csi.py  test_csi_opencv.py  test_jetracer.py  test_lane.py  test_mpc.py  testencoder_imu.py  timer_overtake.py  version1.py  version2.py  (+3 more)
