<?xml version="1.0"?>
<?model_type psf?>
<package format="3">
  <name>overtaking_car</name>
  <version>0.0.0</version>
  <description>ROS 2 Overtaking Package for JetRacer</description>
  <maintainer email="jetson@todo.todo">jetson</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>